# ==================
# Project definition
# ==================

# Derived from https://peps.python.org/pep-0621/

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42", # At least v42 of setuptools required.
  "versioningit",
]

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.0"

[project]
name = "aika"
description = "Date- and time-range parsing utilities for multiple languages"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "LGPL 3, EUPL 1.2" }
keywords = [
  "open data",
  "public transport",
  "routing",
]
authors = [
  {name = "Andreas Motl", email = "andreas.motl@panodata.org"},
  {name = "Richard Pobering", email = "richard.pobering@panodata.org"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Intended Audience :: Customer Service",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Telecommunications Industry",
  "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Communications",
  "Topic :: Education",
  "Topic :: Home Automation",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]

dependencies = [
  "arbitrary-dateparser==0.0.4",
  "DateRangeParser<1.4",
]

dynamic = [
  "version",
]

[project.optional-dependencies]
develop = [
  "black<24",
  "mypy==1.5.1",
  "poethepoet<1",
  "pyproject-fmt<1.1",
  "ruff==0.0.285",
  "validate-pyproject<0.15",
]
release = [
  "build<1",
  'minibump<1; python_version >= "3.10"',
  "twine<5",
]
test = [
  "coverage<8",
  "freezegun<1.3",
  "pytest<8",
]
[tool.setuptools]
# https://setuptools.pypa.io/en/latest/userguide/package_discovery.html
packages = ["aika"]

[project.urls]
changelog = "https://github.com/panodata/aika/blob/main/CHANGES.md"
documentation = "https://github.com/panodata/aika"
homepage = "https://github.com/panodata/aika"
repository = "https://github.com/panodata/aika"
[tool.black]
line-length = 120

[tool.isort]
profile = "black"
skip_glob = "**/site-packages/**"
skip_gitignore = false

[tool.pytest.ini_options]
minversion = "2.0"
addopts = """
  -rfEX -p pytester --strict-markers --verbosity=3
  """
log_level = "DEBUG"
log_cli_level = "DEBUG"
testpaths = ["tests"]
xfail_strict = true
markers = [
]

[tool.coverage.run]
branch = false
source = ["aika"]

[tool.coverage.report]
fail_under = 0
show_missing = true
omit = [
]

[tool.mypy]
packages = ["aika"]
exclude = [
]
check_untyped_defs = true
ignore_missing_imports = true
implicit_optional = true
install_types = true
no_implicit_optional = true
non_interactive = true
show_error_codes = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.ruff]
line-length = 120

select = [
  # Bandit
  "S",
  # Bugbear
  "B",
  # Builtins
  "A",
  # comprehensions
  "C4",
  # eradicate
  "ERA",
  # flake8-2020
  "YTT",
  # isort
  "I",
  # pandas-vet
  "PD",
  # print
  "T20",
  # Pycodestyle
  "E",
  "W",
  # Pyflakes
  "F",
  # return
  "RET",
]

ignore = [
  "RET505",  # Unnecessary `elif` after `return` statement
]

extend-exclude = [
  "examples/*",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]  # Use of `assert` detected
"aika/cli.py" = ["T201"]  # Allow `print`


# ===================
# Tasks configuration
# ===================

[tool.poe.tasks]
format = [
  { cmd = "black ." },
  # Configure Ruff not to auto-fix (remove!):
  # unused imports (F401), unused variables (F841), `print` statements (T201), and commented-out code (ERA001).
  { cmd = "ruff --fix --ignore=ERA --ignore=F401 --ignore=F841 --ignore=T20 --ignore=ERA001 ." },
  { cmd = "pyproject-fmt pyproject.toml" },
]

lint = [
  { cmd = "ruff ." },
  { cmd = "black --check ." },
  { cmd = "validate-pyproject pyproject.toml" },
  { cmd = "mypy" },
]
test = [
  { cmd = "pytest" },
]
build = { cmd = "python -m build" }
check = ["lint", "test"]

release = [
  "build",
  { cmd = "twine upload --skip-existing dist/*.tar.gz dist/*.whl" },
]
