# ==================
# Project definition
# ==================

# Derived from https://peps.python.org/pep-0621/

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42", # At least v42 of setuptools required.
  "versioningit",
]

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.0"

[project]
name = "aika"
description = "Date- and time-range parsing utilities for multiple languages"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "LGPL 3, EUPL 1.2" }
keywords = [
  "date",
  "multi-language",
  "parsing",
  "time",
  "utility",
]
authors = [
  {name = "Andreas Motl", email = "andreas.motl@panodata.org"},
  {name = "Richard Pobering", email = "richard.pobering@panodata.org"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Intended Audience :: Customer Service",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Telecommunications Industry",
  "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications",
  "Topic :: Education",
  "Topic :: Home Automation",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]

dependencies = [
  "arbitrary-dateparser==0.0.4",
  "DateRangeParser<1.4",
]

dynamic = [
  "version",
]

[project.optional-dependencies]
develop = [
  "mypy<1.12",
  "poethepoet<1",
  "pyproject-fmt<2.3",
  "ruff<0.7",
  "validate-pyproject<0.22",
]
release = [
  "build<2",
  'minibump<1; python_version >= "3.10"',
  "twine<6",
]
test = [
  "freezegun<1.6",
  "pytest<9",
  "pytest-cov<6",
]
[tool.setuptools]
# https://setuptools.pypa.io/en/latest/userguide/package_discovery.html
packages = ["aika"]

[project.urls]
changelog = "https://github.com/panodata/aika/blob/main/CHANGES.md"
documentation = "https://github.com/panodata/aika"
homepage = "https://github.com/panodata/aika"
repository = "https://github.com/panodata/aika"
[tool.black]
line-length = 120

[tool.pytest.ini_options]
minversion = "2.0"
addopts = """
  -rfEX -p pytester --strict-markers --verbosity=3
  --cov --cov-report=term-missing --cov-report=xml
  """
log_level = "DEBUG"
log_cli_level = "DEBUG"
testpaths = ["tests"]
xfail_strict = true
markers = [
]

[tool.coverage.run]
branch = false
source = ["aika"]

[tool.coverage.report]
fail_under = 0
show_missing = true
omit = [
]

[tool.mypy]
packages = ["aika"]
exclude = [
]
check_untyped_defs = true
ignore_missing_imports = true
implicit_optional = true
install_types = true
no_implicit_optional = true
non_interactive = true
show_error_codes = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.ruff]
line-length = 120

lint.select = [
  # Bandit
  "S",
  # Bugbear
  "B",
  # Builtins
  "A",
  # comprehensions
  "C4",
  # eradicate
  "ERA",
  # flake8-2020
  "YTT",
  # isort
  "I",
  # pandas-vet
  "PD",
  # print
  "T20",
  # Pycodestyle
  "E",
  "W",
  # Pyflakes
  "F",
  # return
  "RET",
]

lint.ignore = [
  "RET505",  # Unnecessary `elif` after `return` statement
]

extend-exclude = [
  "examples/*",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Use of `assert` detected
"aika/cli.py" = ["T201"]  # Allow `print`


# ===================
# Tasks configuration
# ===================

[tool.poe.tasks]

check = ["lint", "test"]

format = [
  { cmd = "ruff format ." },
  # Configure Ruff not to auto-fix (remove!):
  # unused imports (F401), unused variables (F841), `print` statements (T201), and commented-out code (ERA001).
  { cmd = "ruff check --fix --ignore=ERA --ignore=F401 --ignore=F841 --ignore=T20 --ignore=ERA001 ." },
  { cmd = "pyproject-fmt --keep-full-version pyproject.toml" },
]
lint = [
  { cmd = "ruff format --check" },
  { cmd = "ruff check ." },
  { cmd = "validate-pyproject pyproject.toml" },
  { cmd = "mypy" },
]
test = [
  { cmd = "pytest" },
]

build = { cmd = "python -m build" }
upload = { cmd = "twine upload --skip-existing dist/*.tar.gz dist/*.whl" }
release = [
  "build",
  "upload",
]
